# nagisa_bert

./: LICENSE  README.md  setup.cfg
.github/workflows/: check_wheels_from_pypi.yml  python-package.yml
nagisa_bert/: __init__.py  tokenization_nagisa_bert.py
notebooks/: embedding_visualization-japanese_bert_models.ipynb  embedding_visualization_japanese_bert_models.ipynb  feature_extraction-japanese_bert_models.ipynb  fill_mask-japanese_bert_models.ipynb  text_classification-amazon_reviews_ja.ipynb  text_classification-csv_files.ipynb
tests/: test_tokenization_nagisa_bert.py
