[metadata]
name = nagisa_bert
version = attr: nagisa_bert.__version__
url = https://github.com/taishi-i/nagisa_bert
author = taishi-i
author_email = taishi.ikeda.0323@gmail.com
maintainer = taishi-i
maintainer_email = taishi.ikeda.0323@gmail.com
classifiers =
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Software Development :: Libraries :: Python Modules
  Natural Language :: Japanese
license = MIT
license_file = LICENSE
description = A BERT model for nagisa
long_description = file: README.md
long_description_content_type = text/markdown
keywords = NLP, BERT, Transformers, Japanese

[options]
zip_safe = false
install_requires =
  nagisa
  transformers
python_requires = >=3.7
include_package_data=True
packages = find:
